ArtemisConfiguration ut